force-app/main/default/objects/IFv2_CustomErrorMessages__c/IFv2_CustomErrorMessages__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to display custom error messages.</description>
    <label>Custom Error Messages</label>
</CustomObject>