force-app/main/default/objects/IFv2_CustomErrorMessages__c/fields/CustomErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CustomErrorMessage__c</fullName>
    <description>Used to enter custom error message</description>
    <inlineHelpText>Enter custom error message</inlineHelpText>
    <label>Custom Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>