force-app/main/default/objects/IFv2_CustomErrorMessages__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to specify whether record is active or not</description>
    <inlineHelpText>Check to activate the record</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>