force-app/main/default/objects/IFv2_CustomErrorMessages__c/fields/StandardErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>StandardErrorMessage__c</fullName>
    <description>Used to store custom error message</description>
    <inlineHelpText>Enter the Standard error message</inlineHelpText>
    <label>Standard Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>